--- a/style.css
+++ b/style.css
@@ -1,7 +1,40 @@
 body {
-    background-image: url("old-script-writing-on-seamless-old-paper-texture-1072.jpg")
-    
+    background-image: url("old-script-writing-on-seamless-old-paper-texture-1072.jpg");
+    margin-left: 15%;
+    margin-right: 15%;
 }
+.taskbar {
+    background-color: rgba(245, 245, 220, 0.5);
+    overflow: hidden;
+    padding: 0;
+    margin: 0;
+}
+  
+.taskbar ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+}
+  
+.taskbar li {
+    flex: 1;
+}
+  
+.taskbar a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 16px;
+    text-decoration: none;
+    transition: background 0.3s;
+}
+  
+.taskbar a:hover {
+    background-color: #575757;
+  
+}
+
 h1 {
     background-color: aliceblue;
     text-align: center;
